--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ricokahler/promise-suspender": "^1.0.1",
     "@ricokahler/react-mounting-transition": "^1.0.1",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^27.4.0",
@@ -15,6 +16,7 @@
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
     "react-easy-crop": "^4.0.1",
+    "react-error-boundary": "^3.1.4",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5"
   },
